fixed image and text alignment on Portfolio page.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,7 +4,7 @@ body {
     font-size: 18px;
     line-height: 34px;
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
-    /*background: url(assets/images/full_bloom.png);*/
+    background: url(../images/full_bloom.png);
 }
 *{
     box-sizing: border-box;
@@ -58,7 +58,7 @@ h3 {
 }
 
 #logo {
-    width: 280px;
+    width: 250px;
     height: 90px;
     background: #4aaaa5;
     float: left;
@@ -91,12 +91,12 @@ nav a:first-child {
 }
 
 footer {
-    position: fixed;
-    left: 0;
-    bottom: 0;
-    width: 100%;
-    text-align: center;
-    /*padding: 30px 0;*/
+    /*position: fixed;*/
+    /*left: 0;*/
+    /*bottom: 0;*/
+    /*width: 100%;*/
+    /*text-align: center;*/
+    padding: 30px 0;
     clear: both;
     font-size: 12px;
     /*color: #ffffff;*/
@@ -129,7 +129,18 @@ h3 {
     border: 1px solid #dddddd;
 }
 
-/* Portfolio Page*/
+/* About Me Page */
+
+.placeholder-img {
+    float: left;
+    margin-right: 20px;
+}
+
+p {
+    color:  #777777;
+}
+
+/* Portfolio Page */
 
 .work {
     position: relative;
